# recc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md
.devcontainer/: devcontainer.json
cmake/: Config.cmake.in  deps.cmake
docs/source/: additional-utilities.rst  cmake-integration.rst  conf.py  configuration-variables.rst  index.rst  installation.rst  running.rst
docs/source/_static/: local-remote.uml
proto/: CMakeLists.txt
src/: CMakeLists.txt  actionbuilder.cpp  actionbuilder.h  clangscandeps.cpp  clangscandeps.h  compilerdefaults.cpp  compilerdefaults.h  datautils.cpp  datautils.h  deps.cpp  deps.h  digestgenerator.cpp  digestgenerator.h  env.cpp  env.h  executioncontext.cpp  executioncontext.h  fileutils.cpp  fileutils.h  grpcchannels.cpp  grpcchannels.h  linkdeps.cpp  linkdeps.h  metricsconfig.cpp  metricsconfig.h  parsedcommand.cpp  parsedcommand.h  parsedcommandfactory.cpp  parsedcommandfactory.h  protos.h  reccdefaults.h  reccsignals.cpp  reccsignals.h  remoteexecutionsignals.cpp  remoteexecutionsignals.h  requestmetadata.cpp  requestmetadata.h  shellutils.cpp  shellutils.h  subprocess.cpp  (+4 more)
test/: CMakeLists.txt  actionbuilder.t.cpp  datautils.t.cpp  deps.t.cpp  digestgenerator.t.cpp  fileutils.t.cpp  metrictagging.t.cpp  parsedcommand.t.cpp  parsedcommandfactory.t.cpp  remoteexecutionclient.t.cpp  requestmetadata.t.cpp  shellutils.t.cpp  subprocess.t.cpp  threadutils.t.cpp
test/data/: cc
test/data/actionbuilder/: hello.s
test/data/actionbuilder/no_output/: gcc
test/data/datautils/: foodep.CPP  foodep.h  foomain.c++
test/data/datautils/config/: recc.conf
test/data/recc/: recc.conf
test/env/: env_check_order.t.cpp  env_default_action_cache.t.cpp  env_default_cas.t.cpp  env_different_action_cache.t.cpp  env_different_cas.t.cpp  env_file_advertised_order.t.cpp  env_from_file.t.cpp  env_from_file_override.t.cpp  env_multiple_configs.t.cpp  env_parse_config.t.cpp  env_path_vector.t.cpp  env_reapi_version.t.cpp  env_set.t.cpp  env_utils.t.cpp
